# scrum-coach

./: .env.example  .gitignore  CLAUDE.md  README.md
backend/: pyproject.toml
backend/app/: __init__.py
backend/app/core/: __init__.py
backend/app/generators/: __init__.py
backend/app/models/: __init__.py
backend/app/rag/: __init__.py
backend/app/scrapers/: __init__.py
backend/tests/: test_smoke.py
docs/adr/: README.md
docs/design/: README.md
docs/interviews/: 2026-05-20-international-survey-kit.md  2026-05-21-claude-in-chrome-tally-build-prompt.md  README.md
scripts/dev/: setup.sh
